add louyout for artits

--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/StyleManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/StyleManage/Create.cshtml
@@ -24,7 +24,7 @@
         </form>
     </div>
 </div>
-<div>@Model.Msg</div>
+<div class="text-danger">@Model.Msg</div>
 <div>
     <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="Index">Back to List</a>
 </div>
