--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/MyProfile/Profile.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/MyProfile/Profile.cshtml
@@ -41,7 +41,7 @@
             </div>
         </form>
     </div>
-    <div> @Model.Msg</div>
+    <div class="text-danger">@Model.Msg</div>
 </div>
 
 <div>
