--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/AccountManage/Create.cshtml
@@ -43,7 +43,7 @@
         </form>
     </div>
 </div>
-<div>@Model.Msg</div>
+<div class="text-danger">@Model.Msg</div>
 <div>
     <a asp-page="Index">Back</a>
 </div>
