--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Delete.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Delete Certificate";
 }
-<h1>Delete</h1>
+
+<h1 class="mt-4">Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -22,15 +23,14 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CertificateArtist.Urllink)
         </dd>
-       
     </dl>
 
     <form method="post">
         <input type="hidden" asp-for="CertificateArtist.CertificateId" />
         <input type="hidden" asp-for="CertificateArtist.ArtistId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back</a>
+        <a asp-page="./Index" class="btn btn-secondary">Back</a>
     </form>
 </div>
 
-<div> @Model.Msg</div>
+<div class="text-danger">@Model.Msg</div>
