--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Edit.cshtml
@@ -5,30 +5,30 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 class="mt-4">Edit</h1>
 
 <h4>Artist's Certificate</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CertificateArtist.CertificateId" />
             <input type="hidden" asp-for="CertificateArtist.ArtistId" />
             <div class="form-group">
-                <label asp-for="CertificateArtist.Urllink" class="control-label"></label>
-                <input asp-for="CertificateArtist.Urllink" class="form-control"/>
+                <label asp-for="CertificateArtist.Urllink" class="control-label">Certificate Link</label>
+                <input asp-for="CertificateArtist.Urllink" class="form-control" />
                 <span asp-validation-for="CertificateArtist.Urllink" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary">Save</button>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back</a>
+<div class="mt-2">
+    <a asp-page="./Index" class="btn btn-secondary">Back</a>
 </div>
 
 @section Scripts {
