--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
@@ -5,42 +5,43 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <h1>Delete TattoosDesign</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TattoosDesign</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TattoosDesign.TattoosDesignName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TattoosDesign.TattoosDesignName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TattoosDesign.ImgUri)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TattoosDesign.ImgUri)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TattoosDesign.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TattoosDesign.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TattoosDesign.Style)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TattoosDesign.Style.StyleName)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="TattoosDesign.TattoosDesignId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back</a>
-    </form>
+    <div>
+        <h3>Are you sure you want to delete this?</h3>
+
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.TattoosDesign.TattoosDesignName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.TattoosDesign.TattoosDesignName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.TattoosDesign.ImgUri)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.TattoosDesign.ImgUri)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.TattoosDesign.Description)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.TattoosDesign.Description)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.TattoosDesign.Style)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.TattoosDesign.Style.StyleName)
+            </dd>
+        </dl>
+
+        <form method="post">
+            <input type="hidden" asp-for="TattoosDesign.TattoosDesignId" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-page="./Index" class="btn btn-primary">Back</a>
+        </form>
+    </div>
 </div>
