--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Index.cshtml
@@ -2,67 +2,82 @@
 @model ArtTattooProject.Pages.ArtistPage.DesignManage.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Design Index";
 }
 
-<h1>Design</h1>
+<div class="container">
+    <h1>Design</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TattoosDesign[0].TattoosDesignName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TattoosDesign[0].ImgUri)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TattoosDesign[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TattoosDesign[0].Style)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.TattoosDesign) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TattoosDesignName)
-            </td>
-            <td>
-                    <img src=@item.ImgUri width="286" height="135" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Style.StyleName)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.TattoosDesignId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.TattoosDesignId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.TattoosDesignId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-@{
-    var prevDisabled = !Model.TattoosDesign.HasPreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.TattoosDesign.HasNextPage ? "disabled" : "";
-}
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.TattoosDesign.PageIndex - 1)"
-   class="btn btn-primary @prevDisabled">
-    Previous
-</a>
-<a asp-page="./Index"
-   asp-route-pageIndex="@(Model.TattoosDesign.PageIndex + 1)"
-   class="btn btn-primary @nextDisabled">
-    Next
-</a>
+    <p>
+        <a asp-page="Create" class="btn btn-primary badge bg-success">Create New</a>
+    </p>
+
+    <table class="table table-striped" style="width: 100%">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.TattoosDesign[0].TattoosDesignName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TattoosDesign[0].ImgUri)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TattoosDesign[0].Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TattoosDesign[0].Style.StyleName)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.TattoosDesign)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TattoosDesignName)
+                    </td>
+                    <td>
+                        <img src=@item.ImgUri width="286" height="135" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Style.StyleName)
+                    </td>
+                    <td>
+                        <a asp-page="./Edit" asp-route-id="@item.TattoosDesignId" class="btn btn-success btn-xs">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                                <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z" />
+                            </svg>
+                            Edit
+                        </a> 
+                        <a asp-page="./Details" asp-route-id="@item.TattoosDesignId" class="btn btn-info btn-xs">Details</a> 
+                        <a asp-page="./Delete" asp-route-id="@item.TattoosDesignId" class="btn btn-danger btn-xs">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    @{
+        var prevDisabled = !Model.TattoosDesign.HasPreviousPage ? "disabled" : "";
+        var nextDisabled = !Model.TattoosDesign.HasNextPage ? "disabled" : "";
+    }
+    <a asp-page="./Index"
+       asp-route-pageIndex="@(Model.TattoosDesign.PageIndex - 1)"
+       class="btn btn-primary @prevDisabled">
+        Previous
+    </a>
+    <a asp-page="./Index"
+       asp-route-pageIndex="@(Model.TattoosDesign.PageIndex + 1)"
+       class="btn btn-primary @nextDisabled">
+        Next
+    </a>
+</div>
+
+<style>
+    a {
+        text-decoration: none;
+    }
+</style>
