--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Create.cshtml
@@ -23,11 +23,11 @@
             </div>
         </form>
     </div>
-    <div> @Model.Msg</div>
+    <div class="text-danger">@Model.Msg</div>
 </div>
 
 <div>
-    <a asp-page="Index">Back</a>
+    <a asp-page="Index" class="btn btn-primary">Back</a>
 </div>
 
 @section Scripts {
