--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Delete.cshtml
@@ -5,36 +5,37 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <h1>Delete Service</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Service</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Service.ServiceName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Service.ServiceName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Service.Price)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Service.Price)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Service.Artist)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Service.Artist.ArtistId)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Service.ServiceId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back</a>
-    </form>
+    <div>
+        <h3>Are you sure you want to delete this?</h3>
+
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Service.ServiceName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Service.ServiceName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Service.Price)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Service.Price)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Service.Artist)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Service.Artist.ArtistId)
+            </dd>
+        </dl>
+
+        <form method="post">
+            <input type="hidden" asp-for="Service.ServiceId" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-page="./Index" class="btn btn-primary">Back</a>
+        </form>
+    </div>
 </div>
