--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Edit.cshtml
@@ -5,36 +5,41 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="container">
+    <h1>Edit Service</h1>
 
-<h4>Service</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Service.ServiceId" />
-            <div class="form-group">
-                <label asp-for="Service.ServiceName" class="control-label"></label>
-                <input asp-for="Service.ServiceName" class="form-control" />
-                <span asp-validation-for="Service.ServiceName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Service.Price" class="control-label"></label>
-                <input asp-for="Service.Price" class="form-control" />
-                <span asp-validation-for="Service.Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Service.ServiceId" />
+
+                <div class="form-group">
+                    <label asp-for="Service.ServiceName" class="control-label">Service Name</label>
+                    <input asp-for="Service.ServiceName" class="form-control" />
+                    <span asp-validation-for="Service.ServiceName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Service.Price" class="control-label">Price</label>
+                    <input asp-for="Service.Price" class="form-control" />
+                    <span asp-validation-for="Service.Price" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <a asp-page="./Index" class="btn btn-primary">Back</a>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
