--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Edit.cshtml
@@ -39,7 +39,7 @@
             </div>
         </form>
     </div>
-    <div> @Model.Msg</div>
+    <div class="text-danger">@Model.Msg</div>
 </div>
 
 <div>
