--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Create.cshtml
@@ -40,7 +40,7 @@
             </div>
         </form>
     </div>
-    <div> @Model.Msg</div>
+    <div class="text-danger">@Model.Msg</div>
 </div>
 
 <div>
