--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Delete.cshtml
@@ -28,7 +28,7 @@
     <form method="post">
         <input type="hidden" asp-for="CertificateArtist.CertificateId" />
         <input type="hidden" asp-for="CertificateArtist.ArtistId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-page="./Index" class="btn btn-secondary">Back</a>
     </form>
 </div>
