--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Delete.cshtml
@@ -34,7 +34,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="Schedule.ScheduleId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
         <a asp-page="./Index">Back</a>
     </form>
 </div>
