--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Delete.cshtml
@@ -31,10 +31,10 @@
                 @Html.DisplayFor(model => model.Service.Artist.ArtistId)
             </dd>
         </dl>
-
+        <div>@Model.Msg</div>
         <form method="post">
             <input type="hidden" asp-for="Service.ServiceId" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" />
             <a asp-page="./Index" class="btn btn-primary">Back</a>
         </form>
     </div>
