fix some layout

--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/CertificateManage/Create.cshtml
@@ -29,8 +29,8 @@
     </div>
 </div>
 
-<div class="mt-2">
-    <a asp-page="Index" class="btn btn-secondary">Back</a>
+<div>
+    <a asp-page="Index" class="btn btn-secondary mt-2">Back</a>
 </div>
 
 @section Scripts {
