--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Index.cshtml
@@ -54,7 +54,7 @@
                             </svg>
                             Edit
                         </a> 
-                        <a asp-page="./Delete" asp-route-id="@item.ServiceId" class="btn btn-warning btn-xs">Delete</a>
+                        <a asp-page="./Delete" asp-route-id="@item.ServiceId" class="btn btn-danger btn-xs">Delete</a>
                     </td>
                 </tr>
             }
