--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Details.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/AppointmentManage/Details.cshtml
@@ -60,5 +60,5 @@
     Next
 </a>
 <div>
-    <a asp-page="./Index">Back</a>
+    <a class="small fw-bold mt-2 pt-1 mb-0"asp-page="./Index">Back</a>
 </div>
