--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Delete.cshtml
@@ -41,6 +41,6 @@
         {
             <input type="submit" value="Active" class="btn btn-danger" />
         }
-        <a asp-page="./Index">Back</a>
+        <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="./Index">Back</a>
     </form>
 </div>
