--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Create.cshtml
@@ -36,7 +36,7 @@
                     <span asp-validation-for="TattoosDesign.Description" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </form>
@@ -45,7 +45,7 @@
     </div>
 
     <div>
-        <a asp-page="Index" class="btn btn-primary">Back</a>
+        <a asp-page="Index" class="btn btn-secondary mt-2">Back</a>
     </div>
 </div>
 
