--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Delete.cshtml
@@ -41,7 +41,7 @@
         <form method="post">
             <input type="hidden" asp-for="TattoosDesign.TattoosDesignId" />
             <input type="submit" value="Delete" class="btn btn-danger" /> 
-            <a asp-page="./Index" class="btn btn-primary">Back</a>
+            <a asp-page="./Index" class="btn btn-secondary">Back</a>
         </form>
     </div>
 </div>
