--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/DesignManage/Edit.cshtml
@@ -38,7 +38,7 @@
                     <span asp-validation-for="TattoosDesign.Description" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </form>
@@ -46,7 +46,7 @@
     </div>
 
     <div>
-        <a asp-page="./Index" class="btn btn-primary">Back</a>
+        <a asp-page="./Index" class="btn btn-secondary mt-2">Back</a>
     </div>
 </div>
 
