--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/MyProfile/Profile.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/MyProfile/Profile.cshtml
@@ -5,47 +5,49 @@
 }
 
 
-<h4>Your profile</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="password" class="control-label"></label>
-                <input type="password" asp-for="password" class="form-control" />
-                <span asp-validation-for="password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Artist.Fullname" class="control-label"></label>
-                <input asp-for="Artist.Fullname" class="form-control" />
-                <span asp-validation-for="Artist.Fullname" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Artist.Phone" class="control-label"></label>
-                <input asp-for="Artist.Phone" class="form-control" />
-                <span asp-validation-for="Artist.Phone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="newPassword" class="control-label"></label>
-                <input type="password" asp-for="newPassword" class="form-control" />
-                <span asp-validation-for="newPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="confirmPassword" class="control-label"></label>
-                <input type="password" asp-for="confirmPassword" class="form-control" />
-                <span asp-validation-for="confirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="container">
+    <h4 class="mt-4">Your profile</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="password" class="control-label">Password</label>
+                    <input type="password" asp-for="password" class="form-control" />
+                    <span asp-validation-for="password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Artist.Fullname" class="control-label">Full Name</label>
+                    <input asp-for="Artist.Fullname" class="form-control" />
+                    <span asp-validation-for="Artist.Fullname" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Artist.Phone" class="control-label">Phone</label>
+                    <input asp-for="Artist.Phone" class="form-control" />
+                    <span asp-validation-for="Artist.Phone" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="newPassword" class="control-label">New Password</label>
+                    <input type="password" asp-for="newPassword" class="form-control" />
+                    <span asp-validation-for="newPassword" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="confirmPassword" class="control-label">Confirm Password</label>
+                    <input type="password" asp-for="confirmPassword" class="form-control" />
+                    <span asp-validation-for="confirmPassword" class="text-danger"></span>
+                </div>
+                <div class="form-group mt-2">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+        <div class="text-danger">@Model.Msg</div>
     </div>
-    <div class="text-danger">@Model.Msg</div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back</a>
+    <div class="mt-2">
+        <a asp-page="./Index" class="btn btn-secondary">Back</a>
+    </div>
 </div>
 
 @section Scripts {
