--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Create.cshtml
@@ -5,31 +5,35 @@
     ViewData["Title"] = "Create schedule";
 }
 
-<h1>Add new free schedule</h1>
+<div class="container">
+    <h1 class="mt-4">Add new free schedule</h1> 
 
-<h4>Schedule</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Schedule.Time" class="control-label"></label>
-                <input asp-for="Schedule.Time" class="form-control" />
-                <span asp-validation-for="Schedule.Time" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4 class="mt-2">Schedule</h4> 
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Schedule.Time" class="control-label"></label>
+                    <input asp-for="Schedule.Time" class="form-control" />
+                    <span asp-validation-for="Schedule.Time" class="text-danger"></span>
+                </div>
+                <div class="form-group mt-2">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+        <div class="text-danger">@Model.Msg</div>
     </div>
-    <div class="text-danger">@Model.Msg</div>
-</div>
 
-<div>
-    <a asp-page="Index" class="btn btn-primary">Back</a>
+    <div class="mt-2">
+        <a asp-page="Index" class="btn btn-secondary">Back</a>
+    </div>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
