--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Delete.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Delete.cshtml
@@ -35,7 +35,7 @@
     <form method="post">
         <input type="hidden" asp-for="Schedule.ScheduleId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a asp-page="./Index">Back</a>
+        <a asp-page="./Index" class="btn btn-secondary">Back</a>
     </form>
 </div>
 
