--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/SchedulesManage/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <h1>Edit Schedule</h1>
+    <h1 class="mt-4">Edit Schedule</h1> 
 
     <div class="row">
         <div class="col-md-4">
@@ -20,15 +20,15 @@
                     <span asp-validation-for="Schedule.Time" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
 
-    <div>
-        <a asp-page="./Index" class="btn btn-primary">Back</a>
+    <div class="mt-2">
+        <a asp-page="./Index" class="btn btn-secondary">Back</a>
     </div>
 </div>
 
