--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Create.cshtml
@@ -5,40 +5,44 @@
     ViewData["Title"] = "Create service";
 }
 
-<h1>Add new service</h1>
+<div class="container">
+    <h1 class="mt-4">Add new service</h1> 
 
-<h4>Service</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Service.ServiceName" class="control-label"></label>
-                <input asp-for="Service.ServiceName" class="form-control" />
-                <span asp-validation-for="Service.ServiceName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Service.Price" class="control-label"></label>
-                <input asp-for="Service.Price" class="form-control" />
-                <span asp-validation-for="Service.Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Service.TattoosDesignId" class="control-label"></label>
-                <select asp-for="Service.TattoosDesignId" class="form-control" asp-items="ViewBag.Design"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4 class="mt-2">Service</h4> 
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Service.ServiceName" class="control-label"></label>
+                    <input asp-for="Service.ServiceName" class="form-control" />
+                    <span asp-validation-for="Service.ServiceName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Service.Price" class="control-label"></label>
+                    <input asp-for="Service.Price" class="form-control" />
+                    <span asp-validation-for="Service.Price" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Service.TattoosDesignId" class="control-label"></label>
+                    <select asp-for="Service.TattoosDesignId" class="form-control" asp-items="ViewBag.Design"></select>
+                </div>
+                <div class="form-group mt-2">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+        <div class="text-danger">@Model.Msg</div>
     </div>
-    <div class="text-danger">@Model.Msg</div>
-</div>
 
-<div>
-    <a asp-page="Index">Back</a>
+    <div >
+        <a asp-page="Index" class="btn btn-secondary mt-2">Back</a>
+    </div>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
