--- a/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Edit.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/ArtistPage/ServiceManage/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <h1>Edit Service</h1>
+    <h1 class="mt-4">Edit Service</h1>
 
     <div class="row">
         <div class="col-md-4">
@@ -26,7 +26,7 @@
                     <span asp-validation-for="Service.Price" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </form>
@@ -34,7 +34,7 @@
     </div>
 
     <div>
-        <a asp-page="./Index" class="btn btn-primary">Back</a>
+        <a asp-page="./Index" class="btn btn-secondary mt-2">Back</a>
     </div>
 </div>
 
