--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Create.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Create.cshtml
@@ -35,7 +35,7 @@
             </div>
             
                 <input type="hidden" asp-for="studio.Name" class="form-control" disabled />
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back</a>
+    <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="Index">Back</a>
 </div>
 
 @section Scripts {
