--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Details.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/ArtistManage/Details.cshtml
@@ -24,7 +24,7 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Index">Back</a>
+    <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="./Index">Back</a>
 </div>
 
 <table class="table">
