--- a/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Index.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/AdminPage/StudioManage/Index.cshtml
@@ -61,7 +61,7 @@
                             else
                             {
                                 <a asp-page="./Delete" asp-route-id="@item.StudioId">
-                                    <button type="button" class="btn btn-warning btn-xs">Active <span class="glyphicon glyphicon-edit"></span></button>
+                                    <button type="button" class="btn btn-success btn-xs">Active <span class="glyphicon glyphicon-edit"></span></button>
                                 </a>
                             }
                         </td>
