--- a/PRN221_Project/ArtTattooProject/Pages/StaffPage/MyProfile/Profile.cshtml
+++ b/PRN221_Project/ArtTattooProject/Pages/StaffPage/MyProfile/Profile.cshtml
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="./Index">Back</a>
+    <a class="small fw-bold mt-2 pt-1 mb-0" asp-page="../Index">Back</a>
 </div>
 
 @section Scripts {
